[package]
name = "chrono-systemd-time"
version = "0.3.0"
authors = [
  "Josh Resch <joshresch.cpp@gmail.com>",
  "Collide <three-dim-sky@foxmail.com>",
]
edition = "2024"
description = "Library which parses systemd.time style timestamps into chrono types"
homepage = "https://github.com/Odoh/chrono-systemd-time"
documentation = "https://docs.rs/chrono-systemd-time"
repository = "https://github.com/Odoh/chrono-systemd-time"
keywords = ["chrono", "date", "time", "systemd"]
categories = ["date-and-time"]
readme = "README.md"
license = "MIT/Apache-2.0"
include = ["src/**/*", "Cargo.toml", "LICENSE*", "README.md"]

[dependencies]
chrono = "0.4"
